# Fastapi-repo-project

./: .gitignore  main.py  package.json
celery-python/ai-rag-api/: .env.example  docker-compose.yml  requirements.txt
celery-python/celery-chroma/: .env.exmple  docker-compose.yml  how-to-run.md  main.py  requirements.txt
celery-python/llm-rag-api/: .env.example  docker-compose.yml  how-to-run.md  main.py  pyproject.toml
celery-python/llm-rag-api/app/api/: deps.py
celery-python/llm-rag-api/app/api/v1/: agent.py  chat.py  documents.py  rag.py  router.py  task.py
celery-python/llm-rag-api/app/core/: celery.py  config.py  logging.py
celery-python/llm-rag-api/app/db/: chroma.py  redis.py
celery-python/llm-rag-api/app/models/: domain.py  schemas.py
celery-python/llm-rag-api/app/services/: agent_service.py  chat_service.py  document_service.py  rag_service.py
celery-python/llm-rag-api/app/tasks/: chat_tasks.py  document_task.py
celery-python/llm-rag-api/app/utils/: file_handler.py  pdf_parser.py  text_splitter.py
celery-python/rag-document/: .env.example  docker-compose.yml  readme.md  requirements.txt
crud/project-1/: main.py  requirements.txt
crud/project-2/: docker-compose.yml  requirements.txt
crud/project-3/: docker-compose.yml  requirements.txt
miniO/: docker-compose.yml  requirements.txt
miniO/app/: config.py  database.py  dependencies.py  main.py  models.py  router.py  service.py  storage.py
playwright/: fixtures.js  playwright.config.js
playwright/multi-doc-rag/: playwright.config.js  test_api.spec.js  test_ui.spec.js
(+166 files in other folders)
